--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "backend",
+  "name": "quick-dine-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "nodemon server.js"
+    "test": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "20200708",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -21,5 +21,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
-  }
+  },
+  "description": ""
 }
